--- a/component/header.html
+++ b/component/header.html
@@ -59,15 +59,15 @@
                     Faculty
                 </li>
                 <li>
-                    <img src="https://www.flaticon.com/svg/vstatic/svg/672/672716.svg?token=exp=1618709502~hmac=7e800e751b794e608da4b2df283f62df">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.onlinewebfonts.com%2Fsvg%2Fimg_506204.png&f=1&nofb=1">
                     Services for Students
                 </li>
                 <li>
-                    <img src="https://www.flaticon.com/svg/vstatic/svg/2099/2099058.svg?token=exp=1618709639~hmac=768e47f89f925a52905af92bd5440cc9">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmaxcdn.icons8.com%2FShare%2Ficon%2Fp1em%2FVery_Basic%2Fsettings1600.png&f=1&nofb=1">
                     Settings
                 </li>
                 <li>
-                    <img src="https://www.flaticon.com/svg/vstatic/svg/157/157933.svg?token=exp=1618709845~hmac=6242e1ee86ca12e69f047a5ce845b896">
+                    <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn.onlinewebfonts.com%2Fsvg%2Fimg_91985.png&f=1&nofb=1">
                     About
                 </li>
             </ul>
@@ -75,14 +75,13 @@
     <div class="main-left">
         <div class="search-container">
             <div class="semester-container">
+                <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.jFRSdFKLTEN4-5hYqoQ2QQAAAA%26pid%3DApi&f=1">
                 <select class="semester-dropdown" id="Semester">
                     <option value="Spring">Spring Semester</option>
                     <option value="Fall">Fall Semester</option>
                     <option value="Short Summer">Short Summer</option>
                     <option value="Long Summer">Long Summer</option>
-                    
                 </select>
-                <img src="https://www.flaticon.com/svg/vstatic/svg/25/25649.svg?token=exp=1618709441~hmac=9fc9578f3d4a058a607c36d660dd0492"/>
             </div>
 
             <div class="search-bar"><input type="text" placeholder="Search course.."></div>
