--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+:root {
+    --back-color: #DCE0EB;
+    --main-color: #F4F5F7;
+    --blue-color: #0053D3;
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -10,12 +16,14 @@ html, body {
     font-family: 'Open Sans', sans-serif;
 }
 
+
+
 .background-back{
     position: relative;
     padding: 20px;
     height: 100%;
     box-sizing: border-box;
-    background-color: #DCE0EB;
+    background-color: var(--back-color);
 }
 
 .main {
@@ -23,7 +31,7 @@ html, body {
     display: flex;
     height: 100%;
     width: 100%;
-    background-color: #F4F5F7;
+    background-color: var(--main-color);
     z-index: 2;
     border-radius: 15px;
     overflow: hidden;
@@ -37,13 +45,17 @@ html, body {
 }
 
 .upr-icon {
+    padding: 20px 40px;
     display: flex;
     height: 50px;
+    align-items: center;
+    border-bottom: 2px solid var(--main-color);
 }
 
 .upr-icon img {
-    height: 20px;
-    width: 20px;
+    height: 40px;
+    width: 40px;
+    margin-right: 20px;
 }
 
 .list-format {
@@ -53,20 +65,59 @@ html, body {
 .list-format img {
     height: 30px;
     width: 30px;
+    margin-right: 20px;
 }
 .list-format li{
-    margin: 20px 0;
+    display: flex;
+    padding: 20px 0;
+    cursor: pointer;
+    border-right: 2px solid white;
+    transition: border-right .3s ease-in-out;
 }
 
+.list-format li:hover{
+    border-right: 3px solid var(--blue-color);
+    color: gray;
+}
+
+
 .main-left {
+    box-sizing: border-box;
     width: 100%;
 }
 
-.search-container {
+.filters-container {
     position: relative;
     display: flex;
     justify-content: flex-end;
     margin: 30px 80px;
+}
+
+.filters-container button {
+    background: transparent;
+    background-color: var(--blue-color);
+    color: white;
+    border: none;
+    width: 120px;
+    height: 40px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.filters-container select {
+    background: transparent;
+    background-color: white;
+    color: black;
+    border: none;
+    width: 320px;
+    height: 40px;
+    padding: 0 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    -moz-appearance:none; /* Firefox */
+    -webkit-appearance:none; /* Safari and Chrome */
+    appearance:none;
+    
 }
 
 .semester-container {
@@ -75,8 +126,11 @@ html, body {
 
 .semester-container img {
     position: absolute;
+    right: 40px;
+    top: 10px;
     height: 20px;
     width: 20px;
+    transform: rotate(180deg);
 }
 
 .semester-dropdown {
@@ -96,37 +150,19 @@ html, body {
     padding-left: 20px;
 }
 
-.search-container button {
-    background: transparent;
-    background-color: #0053D3;
-    color: white;
-    border: none;
-    width: 120px;
-    height: 40px;
-    border-radius: 20px;
-    cursor: pointer;
-}
+.search-bar input:focus{ outline: none; }
 
-.search-container select {
-    background: transparent;
-    background-color: white;
-    color: black;
-    border: none;
-    width: 320px;
-    height: 40px;
-    padding: 0 20px;
-    border-radius: 20px;
-    cursor: pointer;
-    -moz-appearance:none; /* Firefox */
-    -webkit-appearance:none; /* Safari and Chrome */
-    appearance:none;
-    
+.table-padding {
+    padding: 100px 30px;
 }
 
 .enrollment-table {
+    table-layout: fixed;
     width: 100%;
-    margin: 100px 30px;
+    white-space: nowrap;
     border: none;
+    border-radius: 20px;
+    overflow: hidden;
 }
 
 .enrollment-table th {
@@ -137,4 +173,18 @@ html, body {
 .enrollment-table td {
     background-color: white;
     height: 60px;
+}
+
+/* Column widths are based on these cells */
+.row-course {
+    width: 10%;
+}
+.row-description {
+    width: 40%;
+}
+.row-pre {
+    width: 30%;
+}
+.row-co {
+    width: 20%;
 }
