adds dummy data for table

--- a/component/header.html
+++ b/component/header.html
@@ -72,7 +72,7 @@
                 </li>
             </ul>
     </div>
-    <div class="main-left">
+    <div class="main-right">
         <div class="filters-container">
             <div class="semester-container">
                 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.jFRSdFKLTEN4-5hYqoQ2QQAAAA%26pid%3DApi&f=1">
@@ -87,6 +87,13 @@
             <div class="search-bar"><input type="text" placeholder="Search course.."></div>
             
             <button class="side-button-curriculum">My Curriculum</button>
+        </div>
+
+        <div class="side-menu-hidden">
+            <div class="upr-icon">
+                <img src="https://www.uprm.edu/uprmcaep/wp-content/uploads/sites/88/2016/11/logo-uprm.png" alt="icon-uprm" />
+                <div>UPR Matricula</div>
+            </div>
         </div>
         
        
