--- a/css/global.css
+++ b/css/global.css
@@ -177,22 +177,27 @@ html, body {
     table-layout: fixed;
     white-space: nowrap;
     border: none;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     overflow: hidden;
     text-align: center;
-    height: 100%;
 }
 
 .enrollment-table tr {
     height: 60px;
 }
 
+.scrolling-device{
+    height: 100%;
+    overflow: auto;
+}
+
 .enrollment-table-body  {
+    width: 100%;
     position: relative;
-    display: block;
-    height:100%;
-    overflow:auto;
+    overflow:hidden;
     border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .enrollment-table > thead, .enrollment-table-body  tr {
@@ -204,30 +209,31 @@ html, body {
 
 
 .enrollment-table-body td {
+    text-align: center;
     overflow: hidden;
 }
   
 
 /* Column widths are based on these cells */
 
-.col-no{
+.col-no, .enrollment-table-body td:nth-child(1){
     width: 10%;
 }
 
-.col-course{
+.col-course, .enrollment-table-body td:nth-child(2){
     width: 10%;
 }
-.col-description{
+.col-description, .enrollment-table-body td:nth-child(3){
     width: 40%;
 }
-.col-pre{
+.col-pre, .enrollment-table-body td:nth-child(4){
     width: 15%;
 }
-.col-co{
+.col-co, .enrollment-table-body td:nth-child(5){
     width: 15%;
 }
 
-.col-met{
+.col-met, .enrollment-table-body td:nth-child(6){
     width: 10%;
 }
 
