added icon for curriculum menu

--- a/component/header.html
+++ b/component/header.html
@@ -104,9 +104,10 @@
         </div>
 
         <div class="side-menu-hidden">
-            <div class="upr-icon">
+            <div class="upr-icon close">
                 <img src="https://www.uprm.edu/uprmcaep/wp-content/uploads/sites/88/2016/11/logo-uprm.png" alt="icon-uprm" />
                 <div>UPR Matricula</div>
+                <i class="fas fa-times"></i>
             </div>
         </div>
         
