--- a/css/global.css
+++ b/css/global.css
@@ -263,7 +263,7 @@ html, body {
     position: fixed;
     top: 0;
     right: 0;
-    width: 1000px;
+    width: 70%;
     height: 100%;
     background-color: white;
     box-shadow: 0px 1px 35px -11px rgba(0,0,0,0.67);
