Column title changed

--- a/component/header.html
+++ b/component/header.html
@@ -79,9 +79,9 @@
                     <th class="cur-col-sem"> Semester </th>
                     <th class="cur-col-code"> Code </th>
                     <th class="cur-col-course"> Course </th>
-                    <th class="cur-col-cre"> Credit </th>
                     <th class="cur-col-pre"> Pre-requisite </th>
-                    <th class="cur-col-taken"> Approv</th>
+                    <th class="cur-col-core"> Co-requisite </th>
+                    <th class="cur-col-taken"> Approved</th>
                   </tr>
                 </thead>
               </table>
