--- a/component/header.html
+++ b/component/header.html
@@ -59,7 +59,7 @@
                 </select>
             </div>
 
-            <div class="search-bar"><input type="text" placeholder="Search course.."></div>
+            <div class="search-bar"><input id="search-course-input" type="text" placeholder="Search course..."></div>
             
             <button class="side-button-curriculum">My Curriculum</button>
         </div>
