oh man fern i hate cho as

--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,7 @@
 
 .enrollment-table-body  {
     width: 100%;
+    table-layout: fixed;
     position: relative;
     overflow:hidden;
     border-bottom-left-radius: 20px;
