adds term filter

--- a/component/header.html
+++ b/component/header.html
@@ -51,7 +51,7 @@
         <div class="filters-container">
             <div class="semester-container">
                 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.jFRSdFKLTEN4-5hYqoQ2QQAAAA%26pid%3DApi&f=1">
-                <select class="semester-dropdown" id="Semester">
+                <select class="semester-dropdown" id="semester-dropdown">
                     <option value="Spring">Spring Semester</option>
                     <option value="Fall">Fall Semester</option>
                     <option value="Short Summer">Short Summer</option>
