adds login to header

--- a/component/header.html
+++ b/component/header.html
@@ -5,10 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="UPRM icon" type="image/png" href="https://www.uprm.edu/uprmcaep/wp-content/uploads/sites/88/2016/11/logo-uprm.png"/>
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/login.css">
     <title>UPR Matricula</title>
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"></script>
 </head>
 <body>
+
+<!-- Login -->
+
+<div class="upr-login">
+    <form action="action_page.php" method="post">
+        <div class="imgcontainer">
+            <img src="https://www.uprm.edu/uprmcaep/wp-content/uploads/sites/88/2016/11/logo-uprm.png" alt="UPRM-Icon" class="avatar">
+        </div>
+
+        <div class="container">
+            <label for="uname"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="uname" required>
+
+            <label for="psw"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="psw" required>
+
+            <button type="submit">Login</button>
+        </div>
+    </form>
+</div>
+
+
+
+
+<!--  End Login -->
+
 <div class="background-back">
 
 <div class="main">
