Fixed UI/Code conflicts

--- a/component/header.html
+++ b/component/header.html
@@ -20,14 +20,14 @@
             <img src="https://www.uprm.edu/uprmcaep/wp-content/uploads/sites/88/2016/11/logo-uprm.png" alt="UPRM-Icon" class="avatar">
         </div>
 
-        <div class="container">
+        <div class="uprm-login-container">
             <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="uname" required>
+            <input class="upr-login-username" type="text" placeholder="Enter Username" name="uname" required>
 
             <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
+            <input class="upr-login-password" type="password" placeholder="Enter Password" name="psw" required>
 
-            <button type="submit">Login</button>
+            <button class="upr-login-button" type="submit">Login</button>
         </div>
     </form>
 </div>
