--- a/css/login.css
+++ b/css/login.css
@@ -6,7 +6,7 @@
   }
   
   /* Full-width inputs */
-  input[type=text], input[type=password] {
+  .upr-login-username, .upr-login-password {
     width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -19,7 +19,7 @@
   }
   
   /* Set a style for all buttons */
-  button {
+  .upr-login-button {
     background-color: #0053D3;
     color: #F4F5F7;
     padding: 14px 20px;
@@ -30,7 +30,7 @@
   }
   
   /* Add a hover effect for buttons */
-  button:hover {
+  .upr-login-button:hover {
     /* background-color: #053e92; */
     opacity: 0.5;
   }
@@ -55,7 +55,7 @@
   }
   
   /* Add padding to containers */
-  .container {
+  .uprm-login-container {
     padding: 16px;
     display: flex;
     align-items: center;
@@ -63,13 +63,13 @@
     width: 100;
   }
   
-  /* The "Forgot password" text */
+  /* The "Forgot password" text
   span.psw {
     float: right;
     padding-top: 16px;
-  }
+  } */
   
-  /* Change styles for span and cancel button on extra small screens */
+  /* Change styles for span and cancel button on extra small screens
   @media screen and (max-width: 300px) {
     span.psw {
       display: block;
@@ -78,4 +78,4 @@
     .cancelbtn {
       width: 100%;
     }
-  } 
+  }  */
