--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
  /* Bordered form */
- form {
+ .upr-login-form {
     border: 3px solid #f1f1f1;
     font-family: 'Open Sans', sans-serif;
   }
