Fixed UI/Code conflicts

--- a/component/header.html
+++ b/component/header.html
@@ -15,7 +15,7 @@
 <!-- Login -->
 
 <div class="upr-login">
-    <form action="action_page.php" method="post">
+    <form class="upr-login-form" action="action_page.php" method="post">
         <div class="imgcontainer">
             <img src="https://www.uprm.edu/uprmcaep/wp-content/uploads/sites/88/2016/11/logo-uprm.png" alt="UPRM-Icon" class="avatar">
         </div>
