adds login verification

--- a/component/header.html
+++ b/component/header.html
@@ -13,27 +13,25 @@
 <body>
 
 <!-- Login -->
-
-<div class="upr-login">
-    <form class="upr-login-form" action="action_page.php" method="post">
-        <div class="imgcontainer">
-            <img src="https://www.uprm.edu/uprmcaep/wp-content/uploads/sites/88/2016/11/logo-uprm.png" alt="UPRM-Icon" class="avatar">
-        </div>
-
-        <div class="uprm-login-container">
-            <label for="uname"><b>Username</b></label>
-            <input class="upr-login-username" type="text" placeholder="Enter Username" name="uname" required>
-
-            <label for="psw"><b>Password</b></label>
-            <input class="upr-login-password" type="password" placeholder="Enter Password" name="psw" required>
-
-            <button class="upr-login-button" type="submit">Login</button>
-        </div>
-    </form>
+<div class="dark-overlay-upr">
+    <div class="upr-login">
+        <form class="upr-login-form" id="upr-form-auth">
+            <div class="imgcontainer">
+                <img src="https://www.uprm.edu/uprmcaep/wp-content/uploads/sites/88/2016/11/logo-uprm.png" alt="UPRM-Icon" class="avatar">
+            </div>
+    
+            <div class="uprm-login-container">
+                <label for="uname"><b>Username</b></label>
+                <input class="upr-login-username" type="text" placeholder="Enter Username" name="uname" required>
+    
+                <label for="psw"><b>Password</b></label>
+                <input class="upr-login-password" type="password" placeholder="Enter Password" name="psw" required>
+    
+                <button class="upr-login-button" type="submit">Login</button>
+            </div>
+        </form>
+    </div>
 </div>
-
-
-
 
 <!--  End Login -->
 
