--- a/css/login.css
+++ b/css/login.css
@@ -1,13 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
  /* Bordered form */
+
+.dark-overlay-upr {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.555);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
+.upr-login {
+  width: 20%;
+  height: 40%;
+  background-color: white;
+}
+
  .upr-login-form {
-    border: 3px solid #f1f1f1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
     font-family: 'Open Sans', sans-serif;
   }
+
+    /* Add padding to containers */
+    .uprm-login-container {
+      width: 70%;
+      padding: 16px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+    }
   
   /* Full-width inputs */
   .upr-login-username, .upr-login-password {
-    width: 50%;
+    width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: flex;
@@ -20,13 +51,13 @@
   
   /* Set a style for all buttons */
   .upr-login-button {
+    width: 100%;
     background-color: #0053D3;
     color: #F4F5F7;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 50%;
   }
   
   /* Add a hover effect for buttons */
@@ -50,18 +81,11 @@
   
   /* Avatar image */
   img.avatar {
-    width: 20%;
+    width: 30%;
     border-radius: 25%;
   }
   
-  /* Add padding to containers */
-  .uprm-login-container {
-    padding: 16px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    width: 100;
-  }
+
   
   /* The "Forgot password" text
   span.psw {
