adds enrollment course capabilities and logic

--- a/component/header.html
+++ b/component/header.html
@@ -13,7 +13,7 @@
 <body>
 
 <!-- Login -->
-<div class="dark-overlay-upr">
+<div class="dark-overlay-upr" id="main-login-container">
     <div class="upr-login">
         <form class="upr-login-form" id="upr-form-auth">
             <div class="imgcontainer">
@@ -37,7 +37,7 @@
 
 <div class="background-back">
 
-<div class="main">
+<div class="main" id="main-page">
     <div class="main-menu">
             <div class="upr-icon">
                 <img src="https://www.uprm.edu/uprmcaep/wp-content/uploads/sites/88/2016/11/logo-uprm.png" alt="icon-uprm" />
