Worked on enrollment table view

--- a/component/header.html
+++ b/component/header.html
@@ -104,8 +104,8 @@
                 <thead>
                   <tr class="row-header">
                     <th class="cur-col-sem"> Semester </th>
-                    <th class="cur-col-code"> Code </th>
-                    <th class="cur-col-course"> Course </th>
+                    <th class="cur-col-code"> Course </th>
+                    <th class="cur-col-course"> Description </th>
                     <th class="cur-col-pre"> Pre-requisite </th>
                     <th class="cur-col-core"> Co-requisite </th>
                     <th class="cur-col-taken"> Approved</th>
